* new configurable * Dropped gay lexical_casts * New extended possibilities for channels, please use it wisely! ;D (gonna rewrite the ban command dropping the book, sorry balkon :()
git-svn-id: svn://svn.otland.net/private/forgottenserver/trunk@5127 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/config.lua.dist
+++ b/config.lua.dist
@@ -80,6 +80,7 @@
 	deathContainerId = 1987
 	gainExperienceColor = 215
 	addManaSpentInPvPZone = true
+	recoverManaAfterDeathInPvPZone = false
 	squareColor = 0
 	allowFightback = true
 	fistBaseAttack = 7
