* Using 'Omit Frame Pointers' config for nice speed optimization. (This option speeds function calls, because no frame pointers need to be set up and removed. It also frees one more register, (EBP on the Intel 386 or later) for storing frequently used variables and sub-expressions.) - http://msdn.microsoft.com/en-us/library/2kxx5t2c.aspx Note: Compiling may take a bit longer with this optimization on.
git-svn-id: svn://svn.otland.net/private/forgottenserver/trunk@5144 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/vc10/The Forgotten Server.vcxproj
+++ b/vc10/The Forgotten Server.vcxproj
@@ -276,6 +276,7 @@
       <MinimalRebuild>false</MinimalRebuild>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>otpch.h</PrecompiledHeaderFile>
+      <OmitFramePointers>true</OmitFramePointers>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
