* Some changes credited to tcs team * AttackSpeed modifier for outfits and mounts
git-svn-id: svn://svn.otland.net/private/forgottenserver/trunk@5195 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/config.lua.dist
+++ b/config.lua.dist
@@ -231,7 +231,6 @@
 	maxMessageBuffer = 4
 	tradeLimit = 100
 	useCapacity = true
-	healPlayersOnLevelAdvance = true
 
 	-- Depot
 	defaultDepotSizePremium = 2000
@@ -295,13 +294,15 @@
 	-- Rates
 	-- NOTE: experienceStages configuration is located in data/XML/stages.xml.
 	-- rateExperienceFromPlayers 0 to disable.
+	-- For constant spawn count increment, use exact values in rateSpawn* variables.
 	experienceStages = false
 	rateExperience = 5.0
 	rateExperienceFromPlayers = 0
 	rateSkill = 3.0
 	rateMagic = 3.0
 	rateLoot = 2.0
-	rateSpawn = 1
+	rateSpawnMin = 1
+	rateSpawnMax = 1
 
 	-- Monster rates
 	rateMonsterHealth = 1.0
