* Just some changes for banishment system
git-svn-id: svn://svn.otland.net/private/forgottenserver/trunk@5214 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/config.lua.dist
+++ b/config.lua.dist
@@ -46,9 +46,7 @@
 	banLength = 7 * 24 * 60 * 60
 	killsBanLength = 7 * 24 * 60 * 60
 	finalBanLength = 30 * 24 * 60 * 60
-	ipBanishmentLength = 1 * 24 * 60 * 60
-	broadcastBanishments = true
-	violationNameReportActionType = 2
+	ipBanLength = 1 * 24 * 60 * 60
 	autoBanishUnknownBytes = false
 	allowedMaxSizedPackets = 20
 
