* Complete Tibia's "rooking" system * Shorten some new change by Talaturen * Some preparations of the market code
git-svn-id: svn://svn.otland.net/private/forgottenserver/trunk@5253 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/config.lua.dist
+++ b/config.lua.dist
@@ -13,6 +13,12 @@
 	generateAccountNumber = false
 	generateAccountSalt = false
 
+	-- Rook system
+	rookSystemEnabled = false
+	rookTownId = 1
+	rookLevelToGetRooked = 5
+	rookLevelToLeaveRook = 8
+
 	-- Unjustified kills
 	-- NOTE: *Banishment and *BlackSkull variables are >summed up<
 	-- (dailyFragsToRedSkull + dailyFragsToBanishment) with their
