* Fairfight is now configurable.
git-svn-id: svn://svn.otland.net/private/forgottenserver/trunk@5276 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/config.lua.dist
+++ b/config.lua.dist
@@ -14,7 +14,7 @@
 	generateAccountSalt = false
 
 	-- Rook system
-	rookSystemEnabled = false
+	useRookSystem = false
 	rookTownId = 1
 	rookLevelToGetRooked = 5
 	rookLevelToLeaveRook = 8
@@ -88,6 +88,7 @@
 	squareColor = 0
 	allowFightback = true
 	fistBaseAttack = 7
+	useFairfightReduction = true
 
 	-- Connection config
 	worldId = 0
