* Kindof 'exhaustion' for vip actions and talkactions (those only for non-gamemasters) * Lower mount cooldown, now also interrupting other actions
git-svn-id: svn://svn.otland.net/private/forgottenserver/trunk@5308 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/config.lua.dist
+++ b/config.lua.dist
@@ -175,6 +175,7 @@
 	-- Item usage
 	timeBetweenActions = 200
 	timeBetweenExActions = 1000
+	timeBetweenCustomActions = 500
 	hotkeyAimbotEnabled = true
 	tibiaClassicSlots = true
 	canOnlyRopePlayers = true
@@ -243,7 +244,6 @@
 
 	-- Mounts
 	useMounts = true
-	mountCooldown = 2000
 	unmountPlayerInPz = true
 
 	-- VIP list
