--- a/config.lua.dist
+++ b/config.lua.dist
@@ -53,8 +53,7 @@
 	killsBanLength = 7 * 24 * 60 * 60
 	finalBanLength = 30 * 24 * 60 * 60
 	ipBanLength = 1 * 24 * 60 * 60
-	autoBanishUnknownBytes = false
-	allowedMaxSizedPackets = 20
+	allowedMaxSizePackets = 20
 
 	-- Battle
 	-- NOTE: showHealingDamageForMonsters inheritates from showHealingDamage.
