* New way of handling frags- you gonna love it!
git-svn-id: svn://svn.otland.net/private/forgottenserver/trunk@5317 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/config.lua.dist
+++ b/config.lua.dist
@@ -29,15 +29,18 @@
 	useFragHandler = true
 	redSkullLength = 30 * 24 * 60 * 60
 	blackSkullLength = 45 * 24 * 60 * 60
-	dailyFragsToRedSkull = 3
-	weeklyFragsToRedSkull = 5
-	monthlyFragsToRedSkull = 10
-	dailyFragsToBlackSkull = dailyFragsToRedSkull
-	weeklyFragsToBlackSkull = weeklyFragsToRedSkull
-	monthlyFragsToBlackSkull = monthlyFragsToRedSkull
-	dailyFragsToBanishment = dailyFragsToRedSkull
-	weeklyFragsToBanishment = weeklyFragsToRedSkull
-	monthlyFragsToBanishment = monthlyFragsToRedSkull
+	fragsLimit = 24 * 60 * 60
+	fragsSecondLimit = 7 * 24 * 60 * 60
+	fragsThirdLimit = 30 * 24 * 60 * 60
+	fragsToRedSkull = 3
+	fragsSecondToRedSkull = 5
+	fragsThirdToRedSkull = 10
+	fragsToBlackSkull = fragsToRedSkull
+	fragsSecondToBlackSkull = fragsSecondToRedSkull
+	fragsThirdToBlackSkull = fragsThirdToRedSkull
+	fragsToBanishment = fragsToRedSkull
+	fragsSecondToBanishment = fragsSecondToRedSkull
+	fragsThirdToBanishment = fragsThirdToRedSkull
 	blackSkulledDeathHealth = 40
 	blackSkulledDeathMana = 0
 	useBlackSkull = true
