git-svn-id: svn://svn.otland.net/private/forgottenserver/trunk@5346 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/vc10/release.props
+++ b/vc10/release.props
@@ -8,7 +8,11 @@
   <ItemDefinitionGroup>
     <ClCompile>
       <Optimization>Full</Optimization>
+      <WholeProgramOptimization>true</WholeProgramOptimization>
     </ClCompile>
+    <Link>
+      <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
+    </Link>
   </ItemDefinitionGroup>
   <ItemGroup />
 </Project>
