--- a/vc10/tfs02.vcxproj.filters
+++ b/vc10/tfs02.vcxproj.filters
@@ -249,6 +249,9 @@
     <ClCompile Include="..\weapons.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\otpch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\account.h">
