--- a/vc10/settings.props
+++ b/vc10/settings.props
@@ -9,7 +9,7 @@
     <SQLITE_DIR>$(TFSSDKDir)\sqlite3-3.7.7.1\</SQLITE_DIR>
     <MYSQLC_DIR>$(TFSSDKDir)\mysql-connector-c-6.0.2\</MYSQLC_DIR>
     <PREPROCESSOR_DEFS>__CONSOLE__;__LUAJIT__;__USE_SQLITE__;__USE_MYSQL__;_CRT_SECURE_NO_WARNINGS;</PREPROCESSOR_DEFS>
-    <TFS_INCLUDES>$(BoostDir);$(LUA_DIR)\src;$(LIBXML2_DIR)\include;$(LIBICONV_DIR)\include;$(GMP_DIR)\include;$(SQLITE_DIR)\include;$(MYSQLC_DIR)\include</TFS_INCLUDES>
+    <TFS_INCLUDES>$(BoostDir);$(LUA_DIR)\include;$(LIBXML2_DIR)\include;$(LIBICONV_DIR)\include;$(GMP_DIR)\include;$(SQLITE_DIR)\include;$(MYSQLC_DIR)\include</TFS_INCLUDES>
     <TFS_LIBS>$(BoostDir)\stage\lib;$(LUA_DIR)\lib86;$(LIBXML2_DIR)\lib;$(LIBICONV_DIR)\lib;$(GMP_DIR)\lib;$(SQLITE_DIR)\lib;$(MYSQLC_DIR)\lib</TFS_LIBS>
     <TFS_LIBS64>$(BoostDir)\stage64\lib;$(LUA_DIR)\lib64;$(LIBXML2_DIR)\lib64;$(LIBICONV_DIR)\lib64;$(GMP_DIR)\lib64;$(SQLITE_DIR)\lib64;$(MYSQLC_DIR)\lib64</TFS_LIBS64>
     <TFS_LIBDEPS>lua51.lib;libxml2.lib;mpir.lib;sqlite.lib;iconv.lib;libmysql.lib</TFS_LIBDEPS>
@@ -23,11 +23,16 @@
       <WarningLevel>Level3</WarningLevel>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <WholeProgramOptimization>true</WholeProgramOptimization>
+      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeaderFile>otpch.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
       <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies);$(TFS_LIBDEPS)</AdditionalDependencies>
       <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
     </Link>
+    <ResourceCompile>
+      <PreprocessorDefinitions>$(PREPROCESSOR_DEFS)</PreprocessorDefinitions>
+    </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
     <BuildMacro Include="LUA_DIR">
