--- a/config.lua.dist
+++ b/config.lua.dist
@@ -97,7 +97,7 @@
 	ip = "127.0.0.1"
 	bindOnlyGlobalAddress = false
 	loginPort = 7171
-	gamePort = 7172
+	gamePort = "7172"
 	loginTries = 3
 	retryTimeout = 5 * 1000
 	loginTimeout = 60 * 1000
