* Updated Dev-Cpp and MSVC project files.
git-svn-id: svn://svn.otland.net/private/forgottenserver/branches/0.2@5446 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/vc10/tfs02.vcxproj
+++ b/vc10/tfs02.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="..\iologindata.cpp" />
     <ClCompile Include="..\iomap.cpp" />
     <ClCompile Include="..\iomapserialize.cpp" />
+    <ClCompile Include="..\iomarket.cpp" />
     <ClCompile Include="..\item.cpp" />
     <ClCompile Include="..\items.cpp" />
     <ClCompile Include="..\logger.cpp" />
@@ -249,6 +250,7 @@
     <ClInclude Include="..\iologindata.h" />
     <ClInclude Include="..\iomap.h" />
     <ClInclude Include="..\iomapserialize.h" />
+    <ClInclude Include="..\iomarket.h" />
     <ClInclude Include="..\item.h" />
     <ClInclude Include="..\itemloader.h" />
     <ClInclude Include="..\items.h" />
