git-svn-id: svn://svn.otland.net/private/forgottenserver/trunk@5474 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/config.lua.dist
+++ b/config.lua.dist
@@ -140,6 +140,7 @@
 	sqlKeepAlive = 0
 	mysqlReadTimeout = 10
 	mysqlWriteTimeout = 10
+	mysqlReconnectionAttempts = 3
 	encryptionType = "sha1"
 
 	-- Deathlist
