* Remake gui from 0.3 * Configurable talkactions/scripts/buyprem.lua and talkactions/scripts/changesex.lua
git-svn-id: svn://svn.otland.net/private/forgottenserver/branches/0.2@5479 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/gui_resources.rc
+++ b/gui_resources.rc
@@ -13,16 +13,8 @@ BEGIN
 		MENUITEM "&Shutdown", ID_MENU_FILE_SHUTDOWN
 	END
 
-	POPUP "&Server"
+	POPUP "&Actions"
 	BEGIN
-		MENUITEM "&Reject Connections", ID_MENU_GAME_REJECT
-		MENUITEM SEPARATOR
-		MENUITEM "&Broadcast Message", ID_MENU_GAME_BROADCAST
-		POPUP "&Players"
-		BEGIN
-			MENUITEM "&Player List", ID_MENU_GAME_PLAYERS_LIST
-			MENUITEM "&Save players", ID_MENU_GAME_PLAYERS_SAVE
-		END
 		POPUP "&Reload"
 		BEGIN
 			MENUITEM "&Actions", ID_MENU_GAME_RELOAD_ACTIONS
@@ -47,6 +39,18 @@ BEGIN
 			MENUITEM "&Non-PVP", ID_MENU_GAME_WORLDTYPE_NOPVP
 			MENUITEM "&PVP", ID_MENU_GAME_WORLDTYPE_PVP
 			MENUITEM "PVP &Enforced", ID_MENU_GAME_WORLDTYPE_PVPENFORCED
+		END
+	END
+	
+	POPUP "&Server"
+	BEGIN
+		MENUITEM "&Reject Connections", ID_MENU_GAME_REJECT
+		MENUITEM SEPARATOR
+		MENUITEM "&Broadcast Message", ID_MENU_GAME_BROADCAST
+		POPUP "&Players"
+		BEGIN
+			MENUITEM "&Player List", ID_MENU_GAME_PLAYERS_LIST
+			MENUITEM "&Save players", ID_MENU_GAME_PLAYERS_SAVE
 		END
 	END
 END
