Updated VS10 settings and pch.
git-svn-id: svn://svn.otland.net/private/forgottenserver/branches/0.2@5522 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/vc10/debug.props
+++ b/vc10/debug.props
@@ -7,9 +7,11 @@
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
-      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <WholeProgramOptimization>false</WholeProgramOptimization>
+      <MinimalRebuild>false</MinimalRebuild>
+      <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
     </ClCompile>
+    <Link />
   </ItemDefinitionGroup>
   <ItemGroup />
 </Project>
