--- a/vc10/release.props
+++ b/vc10/release.props
@@ -9,6 +9,9 @@
     <ClCompile>
       <Optimization>Full</Optimization>
     </ClCompile>
+    <Link>
+      <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
+    </Link>
   </ItemDefinitionGroup>
   <ItemGroup />
 </Project>
