--- a/Makefile.am
+++ b/Makefile.am
@@ -38,17 +38,17 @@ theforgottenserver_SOURCES = account.h actions.cpp actions.h $(MAYBE_OTADMIN) \
 	fileloader.h game.cpp game.h $(MAYBE_LOGIN) globalevent.cpp globalevent.h \
 	group.cpp group.h house.cpp house.h housetile.cpp housetile.h ioban.cpp \
 	ioban.h ioguild.cpp ioguild.h iologindata.cpp iologindata.h iomap.cpp \
-	iomap.h iomapserialize.cpp iomapserialize.h item.cpp item.h \
-	itemattributes.cpp itemattributes.h items.cpp items.h luascript.cpp \
-	luascript.h mailbox.cpp mailbox.h manager.cpp manager.h map.cpp map.h \
-	monster.cpp monster.h monsters.cpp monsters.h mounts.cpp mounts.h \
-	movement.cpp movement.h networkmessage.cpp networkmessage.h npc.cpp npc.h \
-	otpch.h otserv.cpp otsystem.h outfit.cpp outfit.h outputmessage.cpp \
-	outputmessage.h party.cpp party.h player.cpp player.h position.cpp \
-	position.h protocol.cpp protocol.h protocolgame.cpp protocolgame.h \
-	protocolhttp.cpp protocolhttp.h protocollogin.cpp protocollogin.h \
-	protocolold.cpp protocolold.h quests.cpp quests.h raids.cpp raids.h \
-	scheduler.cpp scheduler.h scriptmanager.cpp \
+	iomap.h iomapserialize.cpp iomapserialize.h iomarket.cpp iomarket.h \
+	item.cpp item.h itemattributes.cpp itemattributes.h items.cpp items.h \
+	luascript.cpp luascript.h mailbox.cpp mailbox.h manager.cpp manager.h \
+	map.cpp map.h monster.cpp monster.h monsters.cpp monsters.h mounts.cpp \
+	mounts.h movement.cpp movement.h networkmessage.cpp networkmessage.h \
+	npc.cpp npc.h otpch.h otserv.cpp otsystem.h outfit.cpp outfit.h \
+	outputmessage.cpp outputmessage.h party.cpp party.h player.cpp player.h \
+	position.cpp position.h protocol.cpp protocol.h protocolgame.cpp \
+	protocolgame.h protocolhttp.cpp protocolhttp.h protocollogin.cpp \
+	protocollogin.h protocolold.cpp protocolold.h quests.cpp quests.h \
+	raids.cpp raids.h scheduler.cpp scheduler.h scriptmanager.cpp \
 	scriptmanager.h server.cpp server.h spawn.cpp spawn.h spells.cpp \
 	spells.h status.cpp status.h talkaction.cpp talkaction.h teleport.cpp \
 	teleport.h templates.h textlogger.cpp textlogger.h thing.cpp thing.h \
