--- a/config.lua.dist
+++ b/config.lua.dist
@@ -197,6 +197,13 @@
 	mailBlockPeriod = 60 * 60 * 1000
 	mailAttemptsFadeTime = 10 * 60 * 1000
 
+	-- Market
+	marketEnabled = true
+	marketOfferDuration = 30 * 24 * 60 * 60
+	premiumToCreateMarketOffer = true
+	checkExpiredMarketOffersEachMinutes = 60
+	maxMarketOffersAtATimePerPlayer = 100
+
 	-- Process
 	-- NOTE: daemonize works only on *nix, same as niceLevel, while
 	-- defaultPriority works only on Windows.
