--- a/vc10/tfs.vcxproj.filters
+++ b/vc10/tfs.vcxproj.filters
@@ -132,6 +132,9 @@
     <ClInclude Include="..\iomapserialize.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\iomarket.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="..\item.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -378,6 +381,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\iomapserialize.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\iomarket.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\item.cpp">
