Added GUI configurations to MSVC, renamed __CONSOLE__ to _CONSOLE
git-svn-id: svn://svn.otland.net/private/forgottenserver/branches/0.2@5571 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/codeblocks/The Forgotten Server.cbp
+++ b/codeblocks/The Forgotten Server.cbp
@@ -19,7 +19,7 @@
 				<Option compiler="gcc" />
 				<Option use_console_runner="0" />
 				<Compiler>
-					<Add option="-D__CONSOLE__" />
+					<Add option="-D_CONSOLE" />
 				</Compiler>
 			</Target>
 		</Build>
