--- a/vc10/settings.props
+++ b/vc10/settings.props
@@ -8,7 +8,7 @@
     <GMP_DIR>$(TFSSDKDir)\mpir-2.5.0\</GMP_DIR>
     <SQLITE_DIR>$(TFSSDKDir)\sqlite3-3.7.7.1\</SQLITE_DIR>
     <MYSQLC_DIR>$(TFSSDKDir)\mysql-connector-c-6.0.2\</MYSQLC_DIR>
-    <PREPROCESSOR_DEFS>__CONSOLE__;__LUAJIT__;__USE_SQLITE__;__USE_MYSQL__;_CRT_SECURE_NO_WARNINGS;</PREPROCESSOR_DEFS>
+    <PREPROCESSOR_DEFS>__LUAJIT__;__USE_SQLITE__;__USE_MYSQL__;_CRT_SECURE_NO_WARNINGS;</PREPROCESSOR_DEFS>
     <TFS_INCLUDES>$(BoostDir);$(LUA_DIR)\include;$(LIBXML2_DIR)\include;$(LIBICONV_DIR)\include;$(GMP_DIR)\include;$(SQLITE_DIR)\include;$(MYSQLC_DIR)\include</TFS_INCLUDES>
     <TFS_LIBS>$(BoostDir)\stage\lib;$(LUA_DIR)\lib86;$(LIBXML2_DIR)\lib;$(LIBICONV_DIR)\lib;$(GMP_DIR)\lib;$(SQLITE_DIR)\lib;$(MYSQLC_DIR)\lib</TFS_LIBS>
     <TFS_LIBS64>$(BoostDir)\stage64\lib;$(LUA_DIR)\lib64;$(LIBXML2_DIR)\lib64;$(LIBICONV_DIR)\lib64;$(GMP_DIR)\lib64;$(SQLITE_DIR)\lib64;$(MYSQLC_DIR)\lib64</TFS_LIBS64>
