* free memory at shutdown is now configurable
git-svn-id: svn://svn.otland.net/private/forgottenserver/trunk@5630 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/config.lua.dist
+++ b/config.lua.dist
@@ -374,6 +374,9 @@
 	shutdownAtGlobalSave = true
 	cleanMapAtGlobalSave = false
 
+	-- Shutdown
+	freeMemoryAtShutdown = true
+
 	-- Spawns
 	deSpawnRange = 2
 	deSpawnRadius = 50
