* 9.53 support (otb charges in Tala  previous commit) * Added missing config
git-svn-id: svn://svn.otland.net/private/forgottenserver/trunk@5645 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/config.lua.dist
+++ b/config.lua.dist
@@ -93,6 +93,7 @@
 	allowFightback = true
 	fistBaseAttack = 7
 	useFairfightReduction = true
+	optionalWarAttackableAlly = false
 
 	-- Connection config
 	worldId = 0
@@ -180,7 +181,7 @@
 	timeBetweenExActions = 1000
 	timeBetweenCustomActions = 500
 	hotkeyAimbotEnabled = true
-	tibiaClassicSlots = true
+	tibiaClassicSlots = false
 	canOnlyRopePlayers = true
 
 	-- Map
