--- a/config.lua.dist
+++ b/config.lua.dist
@@ -374,6 +374,7 @@
 	globalSaveMinute = 0
 	shutdownAtGlobalSave = true
 	cleanMapAtGlobalSave = false
+	closeInstanceOnShutdown = true
 
 	-- Spawns
 	deSpawnRange = 2
