* Added a new feature very requested for me via pm. allowBlockSpawn * #2178 & #2179
git-svn-id: svn://svn.otland.net/private/forgottenserver/trunk@5671 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/config.lua.dist
+++ b/config.lua.dist
@@ -380,6 +380,7 @@
 	deSpawnRange = 2
 	deSpawnRadius = 50
 	monsterSpawnWalkback = true
+	allowBlockSpawn = true
 
 	-- Summons
 	maxPlayerSummons = 2
