* Added support for protection against follow abuse * New configurable option: playerFollowExhaust * See doc/CONFIG_HELP to learn about it
git-svn-id: svn://svn.otland.net/private/forgottenserver/trunk@5674 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/config.lua.dist
+++ b/config.lua.dist
@@ -249,6 +249,9 @@
 	maxMessageBuffer = 4
 	tradeLimit = 100
 	useCapacity = true
+	-- set playerFollowExhaust to 1500 if someone causes lags and kicks
+	-- by following unreachable creatures too often
+	playerFollowExhaust = 0
 
 	-- Depot
 	defaultDepotSizePremium = 2000
