* Fix a compiler error with codeblocks project
git-svn-id: svn://svn.otland.net/private/forgottenserver/trunk@5777 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/cb/TheForgottenServer.cbp
+++ b/cb/TheForgottenServer.cbp
@@ -48,9 +48,9 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-D__USE_MYSQL___" />
-					<Add option="-D__USE_SQLITE___" />
-					<Add option="-D__ENABLE_SERVER_DIAGNOSTIC___" />
+					<Add option="-D__USE_MYSQL__" />
+					<Add option="-D__USE_SQLITE__" />
+					<Add option="-D__ENABLE_SERVER_DIAGNOSTIC__" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
