*Implemented code from #2253 *Fixed #2258 *Fixed #2259
git-svn-id: svn://svn.otland.net/private/forgottenserver/trunk@5804 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/config.lua.dist
+++ b/config.lua.dist
@@ -149,6 +149,7 @@
 	deathListRequiredTime = 1 * 60 * 1000
 	deathAssistCount = 19
 	maxDeathRecords = 5
+	multipleNames = false
 
 	-- Guilds
 	ingameGuildManagement = true
