added externalGuildWarsManagement, untested yet
git-svn-id: svn://svn.otland.net/private/forgottenserver/trunk@5823 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/config.lua.dist
+++ b/config.lua.dist
@@ -152,6 +152,8 @@
 	multipleNames = false
 
 	-- Guilds
+	-- NOTE: externalGuildWarsManagement supports Automatic Account Creator(webpage or whatever you want)
+	externalGuildWarsManagement = false
 	ingameGuildManagement = true
 	levelToFormGuild = 8
 	premiumDaysToFormGuild = 0
