Added Packets per Seconds
git-svn-id: svn://svn.otland.net/private/forgottenserver/trunk@5849 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/config.lua.dist
+++ b/config.lua.dist
@@ -116,6 +116,7 @@
 	forceSlowConnectionsToDisconnect = false
 	loginOnlyWithLoginServer = false
 	premiumPlayerSkipWaitList = false
+	packetsPerSecond = 50
 
 	-- RSA
 	-- NOTE: These should not be changed unless you know what your doing!
