Makefile.mingw fixes again...
git-svn-id: svn://svn.otland.net/private/forgottenserver/trunk@5854 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/Makefile.mingw
+++ b/Makefile.mingw
@@ -60,7 +60,7 @@ $(OBJDIR)/%.o: %.cpp
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o $@ $<
 
 clean:
-	--$(DEL) $(OBJ) $(TARGET)
+	-$(DEL) $(OBJ) $(TARGET)
 
 ${OBJDIR}:
 	@mkdir -p ${OBJDIR}
