* Saving player statements on database is now configurable because of, it's using a lot of GB in db an crashing servers.
git-svn-id: svn://svn.otland.net/private/forgottenserver/trunk@5885 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/config.lua.dist
+++ b/config.lua.dist
@@ -247,6 +247,7 @@
 	promptExceptionTracerErrorBox = true
 	maximumDoorLevel = 500
 	maxMessageBuffer = 4
+	logPlayersStatements = true
 	tradeLimit = 100
 	useCapacity = true
 	-- set playerFollowExhaust to 1500 if someone causes lags and kicks
